apps/objects/cloudflare-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudflare-tunnel
  namespace: cloudflare-gateway
spec:
  gatewayClassName: cloudflare
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: cloudflare-tunnel
